# ElastodynamicsComparison

./: README.md  ed_comp.bib  ed_comp.tex  exactSolution.tex  exactSolutionsED.cpp
CG_method/OneField/: CG_one_field.cc  CMakeLists.txt
CG_method/OneField/AvgAccel/: AvgAccel.cc  CMakeLists.txt
CG_method/OneField/BackwardEuler/: BackwardEuler.cc  CG_one_field.cc
CG_method/OneField/Bathe/: Bathe.cc  CG_one_field.cc  CMakeLists.txt
CG_method/OneField/CDF/: CDF.cc  CMakeLists.txt
CG_method/OneField/ExpGenAlpha/: CMakeLists.txt  ExpGenAlpha.cc
CG_method/OneField/ForwardEuler/: CG_one_field.cc  CMakeLists.txt  ForwardEuler.cc
CG_method/OneField/GenAlpha/: CMakeLists.txt  GenAlpha.cc
CG_method/OneField/HHT/: CMakeLists.txt  HHT.cc
CG_method/OneField/LinAccel/: CMakeLists.txt  LinAccel.cc
CG_method/OneField/Newmark/: CG_one_field.cc
CG_method/OneField/WBZ/: CMakeLists.txt  WBZ.cc
CG_method/OneFieldCombined/: CMakeLists.txt  OneFieldCombined.cc
CG_method/TwoField/: CG_two_field.cc  CMakeLists.txt  TwoFieldPostProcessor.h
CG_method/TwoField/BackwardEuler/: BackwardEuler.cc  CMakeLists.txt
CG_method/TwoField/DIRK_2/: CMakeLists.txt
CG_method/TwoField/ForwardEuler/: ForwardEuler.cc
CG_method/TwoField/RK4/: CMakeLists.txt  RK4.cc
CG_method/TwoField/SymplecticEuler/: CMakeLists.txt  SymplecticEuler.cc
CG_method/TwoFieldCombined/: CMakeLists.txt  ExactSolutionFunction.h  TwoFieldCombined.cc  configFile  user_defined_constants.h
SpaceDG_method/ThreeField/: CMakeLists.txt  DG_three_field.cc
include/: CG_time_discretization.h  DG_time_discretization.h  ExactSolutionFunction.h  RightHandSide.h  gTime.h
